[package]
name = "c2rust-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2.167"

