[workspace]
members = [
]
[package]
name = "avl_tree"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "avl_tree"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test_avl_tree.rs"
name = "test_avl_tree"
[dependencies]
libc= "0.2"
