[workspace]
members = [
]
[package]
name = "binomial_heap"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "binomial_heap"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test_binomial_heap.rs"
name = "test_binomial_heap"
[dependencies]
libc= "0.2"
