[workspace]
members = [
]
[package]
name = "hash_functions"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "hash_functions"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test_hash_functions.rs"
name = "test_hash_functions"
[dependencies]
libc= "0.2"
