[workspace]
members = [
]
[package]
name = "hash_table"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "hash_table"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test_hash_table.rs"
name = "test_hash_table"
[dependencies]
libc= "0.2"
