[workspace]
members = [
]
[package]
name = "rb_tree"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "rb_tree"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test_rb_tree.rs"
name = "test_rb_tree"
[dependencies]
libc= "0.2"
