[workspace]
members = [
]
[package]
name = "sortedarray"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "sortedarray"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test_sortedarray.rs"
name = "test_sortedarray"
[dependencies]
libc= "0.2"
